--- a/README.adoc
+++ b/README.adoc
@@ -1,32 +1,32 @@
-= Snoop Examples
+= SnoopEE Examples
 
-Snoop is an experimental registration and discovery service for Java EE based microservices.
+SnoopEE is an experimental registration and discovery service for Java EE based microservices.
 
-. Start the Snoop Service
+. Start the SnoopEE Service
 
- docker run -it -p 8081:8080 ivargrimstad/snoop-service
+ docker run -it -p 8081:8080 ivargrimstad/snoopee-service
 
 . Start the example applications (in same or different containers)
 
-*snoop-hello*
+*snoopee-hello*
 
 For convenience available as docker image:
 
- docker run -it -p 8091:8080 ivargrimstad/snoop-hello
+ docker run -it -p 8091:8080 ivargrimstad/snoopee-hello
 
-*snoop-world*
+*snoopee-world*
 
 For convenience avilable as docker image:
 
- docker run -it -p 8092:8080 ivargrimstad/snoop-world
+ docker run -it -p 8092:8080 ivargrimstad/snoopee-world
 
-*snoop-swarm*
+*snoopee-swarm*
 
 Packaged as Wildfly Swarm JAR
 
- java -jar target/snoop-hello-swarm-1.0.0-SNAPSHOT-swarm.jar
+ java -jar target/snoopee-hello-swarm-1.0.0-SNAPSHOT-swarm.jar
 
-*snoop-helloworld*
+*snoopee-helloworld*
 
 This application is built using JSR 371 (MVC 1.0). That means that it currently
 only runs latest versions of GlassFish or Payara. The current configuration
